--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -258,11 +258,11 @@
       { url: "https://cards.scryfall.io/large/front/2/5/2524645e-b066-4351-885b-10faa8d819d7.jpg?1699972737", name: "Veloci-ramp-tor (Dinos)" },
       { url: "https://cards.scryfall.io/large/front/1/c/1c3f0ffe-cf51-4c30-8cd5-9e3c7e92c019.jpg?1673307936", name: "Slurp Slurp (Shitizz Jr.)" },
       { url: "https://cards.scryfall.io/large/front/7/d/7d7a8a90-13c1-4b0c-ab2e-fc8d91ccefd9.jpg?1631050242", name: "Poke! You Dead (Poison)" },
-      { url: "https://cards.scryfall.io/large/front/8/1/813a39af-bafe-4a38-a270-39a0ce0f4aa5.jpg?1730489698", name: "Meow Meow!" },
-	    { url: "https://cards.scryfall.io/large/front/d/5/d55a4c02-1aa4-454c-9041-84937377a53b.jpg?1748705763", name: "Achromatic" },
+      { url: "https://cards.scryfall.io/large/front/0/d/0d16e8e0-31b2-4389-afd6-783c501f6fa0.jpg?1738269605", name: "Meow Meow!" },
+	    { url: "https://cards.scryfall.io/large/front/d/5/d55a4c02-1aa4-454c-9041-84937377a53b.jpg?1748705763", name: "Feuille Blanche 8½ x 11 (Colorless)" },
 	    { url: "https://cards.scryfall.io/large/front/5/9/59fc74c0-9a97-44d5-a62e-a2b68880cfac.jpg?1748707861", name: "Endure. Survive. Live." },
 	    { url: "https://cards.scryfall.io/large/front/3/b/3b3e889a-5865-4464-9923-bffa25c50cd2.jpg?1674137513", name: "Jelly-FISH!" },
-	    { url: "https://cards.scryfall.io/large/front/b/8/b8b70585-e0ea-4cb4-9360-a8ab47626696.jpg?1743206346", name: "Pulverize the Archive" },
+	    { url: "https://cards.scryfall.io/large/front/b/8/b8b70585-e0ea-4cb4-9360-a8ab47626696.jpg?1743206346", name: "Mille Mill" },
       { url: "https://cards.scryfall.io/large/front/4/d/4dc2d415-fdf7-4f2d-95d0-a793ffc26491.jpg?1726596878", name: "Caw Caw!" },
     ];
 
