Added Free Companies

--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -264,6 +264,7 @@
 	    { url: "https://cards.scryfall.io/large/front/3/b/3b3e889a-5865-4464-9923-bffa25c50cd2.jpg?1674137513", name: "Jelly-FISH!" },
 	    { url: "https://cards.scryfall.io/large/front/b/8/b8b70585-e0ea-4cb4-9360-a8ab47626696.jpg?1743206346", name: "Mille Mill" },
       { url: "https://cards.scryfall.io/large/front/4/d/4dc2d415-fdf7-4f2d-95d0-a793ffc26491.jpg?1726596878", name: "Caw Caw!" },
+      { url: "https://cards.scryfall.io/large/front/3/2/32a8fda6-8614-45cd-879c-0cb7fa29647e.jpg?1706242214", name: "Free Companies" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
