Typo Jump Scare

--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -193,7 +193,7 @@
     const TILE_IMAGES = [
       { url: "https://cards.scryfall.io/large/front/2/4/246a7176-98bc-4f54-aa61-38747420f178.jpg?1710673450", name: "Hail, Caesar" },
       { url: "https://cards.scryfall.io/large/front/9/f/9f868023-6035-403d-ba91-7a4840c6c392.jpg?1726596831", name: "Miracle Worker (Enchantements 3)" },
-      { url: "https://cards.scryfall.io/large/front/3/0/30f23588-5064-48d9-a271-039df757f8d2.jpg?1726596680", name: "Jump Scaree! (Faces Cachées 2)" },
+      { url: "https://cards.scryfall.io/large/front/3/0/30f23588-5064-48d9-a271-039df757f8d2.jpg?1726596680", name: "Jump Scare! (Faces Cachées 2)" },
       { url: "https://cards.scryfall.io/large/front/8/d/8d7c1f6c-af45-4449-8cf8-e13830b3df8a.jpg?1726596807", name: "Endless Punishment (Pew Pew 2)" },
       { url: "https://cards.scryfall.io/large/front/9/4/94dc35e4-a492-4019-afcd-cbef6f59a512.jpg?1726596850", name: "Death Toll" },
       { url: "https://cards.scryfall.io/large/front/3/d/3d6d6944-a364-41c2-b824-7a1bf6ad0d1e.jpg?1710673435", name: "Mutant Menace (Rad)" },
