Update MTG Guessing Game.html

--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -200,9 +200,9 @@
       { url: "https://cards.scryfall.io/large/front/d/d/dd4a00ff-2206-4e12-a0ab-61ed82c9e6c5.jpg?1686963690", name: "Riders of Rohan (Humains)" },
       { url: "https://cards.scryfall.io/large/front/3/1/31e4b7a1-b377-49d2-a92e-4bcb0db35f16.jpg?1721428130", name: "Animated Army (Bello)" },
       { url: "https://cards.scryfall.io/large/front/3/2/328df403-7428-4b17-bdd1-9759fc0f32d8.jpg?1686963703", name: "Food and Fellowship" },
-	    { url: "https://cards.scryfall.io/large/front/8/6/86b45e3e-8460-4678-87d1-d74479936c83.jpg?1710673445", name: "Scrappy Survivor (Dogmeat)" },
-	    { url: "https://cards.scryfall.io/large/front/e/7/e738e675-4fd1-4bc3-97f5-71d0e2fc3f2e.jpg?1699885010", name: "Explorers of the Deep (Merfolk)" },
-	    { url: "https://cards.scryfall.io/large/front/e/7/e77374ac-3456-48a3-a412-4474547d437c.jpg?1721427770", name: "Hop Hop!" },
+      { url: "https://cards.scryfall.io/large/front/8/6/86b45e3e-8460-4678-87d1-d74479936c83.jpg?1710673445", name: "Scrappy Survivor (Dogmeat)" },
+      { url: "https://cards.scryfall.io/large/front/e/7/e738e675-4fd1-4bc3-97f5-71d0e2fc3f2e.jpg?1699885010", name: "Explorers of the Deep (Merfolk)" },
+      { url: "https://cards.scryfall.io/large/front/e/7/e77374ac-3456-48a3-a412-4474547d437c.jpg?1721427770", name: "Hop Hop!" },
       { url: "https://cards.scryfall.io/large/front/7/b/7b549690-72eb-4244-bb66-996a2bd1027e.jpg?1717566679", name: "Descent into Madness (Trésors)" },
       { url: "https://cards.scryfall.io/large/front/4/5/45851394-b8f3-4713-8239-afcb387d47c5.jpg?1692933623", name: "Virtue and Valor (Enchantement 1)" },
       { url: "https://cards.scryfall.io/large/front/5/5/55e6c31b-f9e9-4e42-a875-985d99300d9d.jpg?1714110406", name: "Most Wanted (Outlaws)" },
@@ -231,7 +231,7 @@
       { url: "https://cards.scryfall.io/large/front/6/9/690acbbf-5e92-4323-b939-31bdb07f9905.jpg?1706448873", name: "Revenant Recon (Surveil)" },
       { url: "https://cards.scryfall.io/large/front/d/5/d53a775d-5898-41a8-b404-9b7d4721c6ba.jpg?1712356126", name: "Shitizz" },
       { url: "https://cards.scryfall.io/large/front/6/9/69dad154-2616-4bd6-8448-0e0458ee136d.jpg?1562274121", name: "Merely a Setback" },
-      { url: "https://cards.scryfall.io/large/front/0/3/03fab911-7bd4-45fa-ba07-cd0e51b0cd95.jpg?1692933608", name: "Fae Dominion (Fairies)" },
+      { url: "https://cards.scryfall.io/large/front/0/3/03fab911-7bd4-45fa-ba07-cd0e51b0cd95.jpg?1692933608", name: "Fae Dominion (Fairies 1)" },
       { url: "https://cards.scryfall.io/large/front/5/4/547888c3-a9a6-4413-b29a-6bcd8a9279bf.jpg?1704848185", name: "Elven Empire (Elfs)" },
       { url: "https://cards.scryfall.io/large/front/8/f/8fa46d54-563d-4b5c-9c69-5ab37dd529b3.jpg?1686963714", name: "Elven Council (Votes)" },
       { url: "https://cards.scryfall.io/large/front/a/2/a209bda2-f0bf-4417-94f9-b73eff0b4217.jpg?1682207229", name: "Divine Convocation (Convoke)" },
@@ -259,12 +259,14 @@
       { url: "https://cards.scryfall.io/large/front/1/c/1c3f0ffe-cf51-4c30-8cd5-9e3c7e92c019.jpg?1673307936", name: "Slurp Slurp (Shitizz Jr.)" },
       { url: "https://cards.scryfall.io/large/front/7/d/7d7a8a90-13c1-4b0c-ab2e-fc8d91ccefd9.jpg?1631050242", name: "Poke! You Dead (Poison)" },
       { url: "https://cards.scryfall.io/large/front/0/d/0d16e8e0-31b2-4389-afd6-783c501f6fa0.jpg?1738269605", name: "Meow Meow!" },
-	    { url: "https://cards.scryfall.io/large/front/d/5/d55a4c02-1aa4-454c-9041-84937377a53b.jpg?1748705763", name: "Feuille Blanche 8½ x 11 (Colorless)" },
-	    { url: "https://cards.scryfall.io/large/front/5/9/59fc74c0-9a97-44d5-a62e-a2b68880cfac.jpg?1748707861", name: "Endure. Survive. Live." },
-	    { url: "https://cards.scryfall.io/large/front/3/b/3b3e889a-5865-4464-9923-bffa25c50cd2.jpg?1674137513", name: "Jelly-FISH!" },
-	    { url: "https://cards.scryfall.io/large/front/b/8/b8b70585-e0ea-4cb4-9360-a8ab47626696.jpg?1743206346", name: "Mille Mill" },
+      { url: "https://cards.scryfall.io/large/front/d/5/d55a4c02-1aa4-454c-9041-84937377a53b.jpg?1748705763", name: "Feuille Blanche 8½ x 11 (Colorless)" },
+      { url: "https://cards.scryfall.io/large/front/5/9/59fc74c0-9a97-44d5-a62e-a2b68880cfac.jpg?1748707861", name: "Endure. Survive. Live." },
+      { url: "https://cards.scryfall.io/large/front/3/b/3b3e889a-5865-4464-9923-bffa25c50cd2.jpg?1674137513", name: "Jelly-FISH!" },
+      { url: "https://cards.scryfall.io/large/front/b/8/b8b70585-e0ea-4cb4-9360-a8ab47626696.jpg?1743206346", name: "Mille Mill" },
       { url: "https://cards.scryfall.io/large/front/4/d/4dc2d415-fdf7-4f2d-95d0-a793ffc26491.jpg?1726596878", name: "Caw Caw!" },
       { url: "https://cards.scryfall.io/large/front/3/2/32a8fda6-8614-45cd-879c-0cb7fa29647e.jpg?1706242214", name: "Free Companies" },
+	  { url: "https://cards.scryfall.io/large/front/7/9/79ba5c35-6e5c-406a-b95f-844d5ec296ab.jpg?1692933638", name: "Mischief Managed (Fairies 2)" },
+      { url: "https://cards.scryfall.io/large/front/7/7/77dcd29e-d0d5-474f-a05b-768ccf6b6293.jpg?1758969458", name: "BOY !" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
