Update MTG Guessing Game.html

--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -256,7 +256,7 @@
       { url: "https://cards.scryfall.io/large/front/c/7/c7f2c2d5-e052-49e8-b5de-712858c2ea78.jpg?1752052932", name: "Scions & Spellcraft" },
       { url: "https://cards.scryfall.io/large/front/2/c/2c3549f6-25df-4ea7-84ad-922ccd4af6b2.jpg?1745970956", name: "Abzan Armor (Walls 2)" },
       { url: "https://cards.scryfall.io/large/front/2/5/2524645e-b066-4351-885b-10faa8d819d7.jpg?1699972737", name: "Veloci-ramp-tor (Dinos)" },
-      { url: "https://cards.scryfall.io/large/front/1/c/1c3f0ffe-cf51-4c30-8cd5-9e3c7e92c019.jpg?1673307936", name: "Slurp Slurp (Shitizz Jr.)" },
+      { url: "https://cards.scryfall.io/large/front/1/c/1c3f0ffe-cf51-4c30-8cd5-9e3c7e92c019.jpg?1673307936", name: "Slurp Slurp" },
       { url: "https://cards.scryfall.io/large/front/7/d/7d7a8a90-13c1-4b0c-ab2e-fc8d91ccefd9.jpg?1631050242", name: "Poke! You Dead (Poison)" },
       { url: "https://cards.scryfall.io/large/front/0/d/0d16e8e0-31b2-4389-afd6-783c501f6fa0.jpg?1738269605", name: "Meow Meow!" },
       { url: "https://cards.scryfall.io/large/front/d/5/d55a4c02-1aa4-454c-9041-84937377a53b.jpg?1748705763", name: "Feuille Blanche 8½ x 11 (Colorless)" },
