--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -246,6 +246,8 @@
       { url: "https://cards.scryfall.io/large/front/d/6/d607b003-6b48-429c-a7fd-45b8dd1bb4f9.jpg?1665822343", name: "Release the Kraken" },
       { url: "https://cards.scryfall.io/large/front/5/5/55c02dc8-0743-400c-b334-ca029caf0463.jpg?1728436128", name: "Mind Flayarrrs (Horrors)" },
       { url: "https://cards.scryfall.io/large/front/e/c/ec983aac-9eda-4086-ad7e-34da9b2987cc.jpg?1674140753", name: "The Shitshow" },
+      { url: "https://cards.scryfall.io/large/front/7/0/70dd138f-391a-4956-bc2a-fe186429c71a.jpg?1599708286", name: "Spiderman Meme" },
+      { url: "https://cards.scryfall.io/large/front/c/6/c697548f-925b-405e-970a-4e78067d5c8e.jpg?1631050504", name: "Winter is Coming" },
       { url: "https://cards.scryfall.io/large/front/9/4/9476fe67-d2d3-4835-8ba6-2a17d18cc141.jpg?1723704351", name: "Sanctuary (Shrines)" },
       { url: "https://cards.scryfall.io/large/front/7/3/73c18cb4-96b1-4af2-912e-974e22877ede.jpg?1673148799", name: "Potato Soup" },
       { url: "https://cards.scryfall.io/large/front/1/c/1c8c41dd-8551-4ce8-a9be-9b9f65718852.jpg?1704848195", name: "Phantom Premonition (Spirits)" },
@@ -265,7 +267,7 @@
       { url: "https://cards.scryfall.io/large/front/b/8/b8b70585-e0ea-4cb4-9360-a8ab47626696.jpg?1743206346", name: "Mille Mill" },
       { url: "https://cards.scryfall.io/large/front/4/d/4dc2d415-fdf7-4f2d-95d0-a793ffc26491.jpg?1726596878", name: "Caw Caw!" },
       { url: "https://cards.scryfall.io/large/front/3/2/32a8fda6-8614-45cd-879c-0cb7fa29647e.jpg?1706242214", name: "Free Companies" },
-	  { url: "https://cards.scryfall.io/large/front/7/9/79ba5c35-6e5c-406a-b95f-844d5ec296ab.jpg?1692933638", name: "Mischief Managed (Fairies 2)" },
+	    { url: "https://cards.scryfall.io/large/front/7/9/79ba5c35-6e5c-406a-b95f-844d5ec296ab.jpg?1692933638", name: "Mischief Managed (Fairies 2)" },
       { url: "https://cards.scryfall.io/large/front/7/7/77dcd29e-d0d5-474f-a05b-768ccf6b6293.jpg?1758969458", name: "BOY !" },
     ];
 
