--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -272,6 +272,9 @@
       { url: "https://cards.scryfall.io/large/front/3/2/32a8fda6-8614-45cd-879c-0cb7fa29647e.jpg?1706242214", name: "Free Companies" },
 	    { url: "https://cards.scryfall.io/large/front/7/9/79ba5c35-6e5c-406a-b95f-844d5ec296ab.jpg?1692933638", name: "Mischief Managed (Fairies 2)" },
       { url: "https://cards.scryfall.io/large/front/7/7/77dcd29e-d0d5-474f-a05b-768ccf6b6293.jpg?1758969458", name: "BOY !" },
+      { url: "https://cards.scryfall.io/large/front/4/5/45393005-78c7-4056-9ce6-310264922af3.jpg?1759412928", name: "Remember That We Once Lived" },
+      { url: "https://cards.scryfall.io/large/front/4/2/42bbedc1-6b83-46b4-8b3b-a4e05ce77d87.jpg?1721428140", name: "Madame Lapin" },
+      { url: "https://cards.scryfall.io/large/front/6/f/6f1bc3bb-46da-492a-850c-f1f588ad8d18.jpg?1732546037", name: "Big Mac" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
