--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -274,6 +274,7 @@
       { url: "https://cards.scryfall.io/large/front/7/7/77dcd29e-d0d5-474f-a05b-768ccf6b6293.jpg?1758969458", name: "BOY !" },
       { url: "https://cards.scryfall.io/large/front/4/5/45393005-78c7-4056-9ce6-310264922af3.jpg?1759412928", name: "Remember That We Once Lived" },
       { url: "https://cards.scryfall.io/large/front/4/2/42bbedc1-6b83-46b4-8b3b-a4e05ce77d87.jpg?1721428140", name: "Madame Lapin" },
+      { url: "https://cards.scryfall.io/large/front/9/4/9476fe67-d2d3-4835-8ba6-2a17d18cc141.jpg?1723704351", name: "Curses!" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
