--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -275,6 +275,7 @@
       { url: "https://cards.scryfall.io/large/front/4/5/45393005-78c7-4056-9ce6-310264922af3.jpg?1759412928", name: "Remember That We Once Lived" },
       { url: "https://cards.scryfall.io/large/front/4/2/42bbedc1-6b83-46b4-8b3b-a4e05ce77d87.jpg?1721428140", name: "Madame Lapin" },
       { url: "https://cards.scryfall.io/large/front/9/4/9476fe67-d2d3-4835-8ba6-2a17d18cc141.jpg?1723704351", name: "Curses!" },
+      { url: "https://cards.scryfall.io/large/front/5/b/5b1fd4c8-7de6-47cb-916a-513d04774f01.jpg?1748707320", name: "LRS - Library Removal Services" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
