--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -276,6 +276,7 @@
       { url: "https://cards.scryfall.io/large/front/4/2/42bbedc1-6b83-46b4-8b3b-a4e05ce77d87.jpg?1721428140", name: "Madame Lapin" },
       { url: "https://cards.scryfall.io/large/front/9/4/9476fe67-d2d3-4835-8ba6-2a17d18cc141.jpg?1723704351", name: "Curses!" },
       { url: "https://cards.scryfall.io/large/front/5/b/5b1fd4c8-7de6-47cb-916a-513d04774f01.jpg?1748707320", name: "LRS - Library Removal Services" },
+      { url: "https://cards.scryfall.io/large/front/9/a/9acf80a5-f2ca-45b4-aca8-fbc690e35401.jpg?1724700069", name: "Fancy Slurp Slurp" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
