Big Mac & Scions

--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -258,7 +258,7 @@
       { url: "https://cards.scryfall.io/large/front/b/5/b55e624b-6f6a-42ae-89aa-0cc62ee55a31.jpg?1674140684", name: "Draconic Dissent (Dragon Goad)" },
       { url: "https://cards.scryfall.io/large/front/8/9/89943e56-0fb0-4de3-bb3a-94b1a016d7e3.jpg?1626118093", name: "Donald Trump (Walls 1)" },
       { url: "https://cards.scryfall.io/large/front/4/c/4c687123-6c34-4aef-8350-70a72b5fb58f.jpg?1689997644", name: "Allahu Akbar" },
-      { url: "https://cards.scryfall.io/large/front/c/7/c7f2c2d5-e052-49e8-b5de-712858c2ea78.jpg?1752052932", name: "Miqo'té Mort" },
+      { url: "https://cards.scryfall.io/large/front/c/7/c7f2c2d5-e052-49e8-b5de-712858c2ea78.jpg?1752052932", name: "Scions & Spellcraft" },
       { url: "https://cards.scryfall.io/large/front/2/c/2c3549f6-25df-4ea7-84ad-922ccd4af6b2.jpg?1745970956", name: "Abzan Armor (Walls 2)" },
       { url: "https://cards.scryfall.io/large/front/2/5/2524645e-b066-4351-885b-10faa8d819d7.jpg?1699972737", name: "Veloci-ramp-tor (Dinos)" },
       { url: "https://cards.scryfall.io/large/front/1/c/1c3f0ffe-cf51-4c30-8cd5-9e3c7e92c019.jpg?1673307936", name: "Slurp Slurp" },
@@ -277,6 +277,7 @@
       { url: "https://cards.scryfall.io/large/front/9/4/9476fe67-d2d3-4835-8ba6-2a17d18cc141.jpg?1723704351", name: "Curses!" },
       { url: "https://cards.scryfall.io/large/front/5/b/5b1fd4c8-7de6-47cb-916a-513d04774f01.jpg?1748707320", name: "LRS - Library Removal Services" },
       { url: "https://cards.scryfall.io/large/front/9/a/9acf80a5-f2ca-45b4-aca8-fbc690e35401.jpg?1724700069", name: "Fancy Slurp Slurp" },
+      { url: "https://cards.scryfall.io/large/front/f/e/fe3e7dd2-b66d-4218-9fde-f84bec26b7bf.jpg?1730489519", name: "Big Mac" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
