--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -278,6 +278,7 @@
       { url: "https://cards.scryfall.io/large/front/5/b/5b1fd4c8-7de6-47cb-916a-513d04774f01.jpg?1748707320", name: "LRS - Library Removal Services" },
       { url: "https://cards.scryfall.io/large/front/9/a/9acf80a5-f2ca-45b4-aca8-fbc690e35401.jpg?1724700069", name: "Fancy Slurp Slurp" },
       { url: "https://cards.scryfall.io/large/front/f/e/fe3e7dd2-b66d-4218-9fde-f84bec26b7bf.jpg?1730489519", name: "Big Mac" },
+      { url: "https://cards.scryfall.io/large/front/9/0/90dee895-037c-45f9-ac4f-b2277da85459.jpg?1760953970", name: "Aloy vs the Machines" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
