Everything, Everywhere, All at Once

--- a/MTG Guessing Game.html
+++ b/MTG Guessing Game.html
@@ -279,6 +279,7 @@
       { url: "https://cards.scryfall.io/large/front/9/a/9acf80a5-f2ca-45b4-aca8-fbc690e35401.jpg?1724700069", name: "Fancy Slurp Slurp" },
       { url: "https://cards.scryfall.io/large/front/f/e/fe3e7dd2-b66d-4218-9fde-f84bec26b7bf.jpg?1730489519", name: "Big Mac" },
       { url: "https://cards.scryfall.io/large/front/9/0/90dee895-037c-45f9-ac4f-b2277da85459.jpg?1760953970", name: "Aloy vs the Machines" },
+      { url: "https://cards.scryfall.io/large/front/0/b/0babfe00-9bad-48fc-b3b1-df8280242fd2.jpg?1681729369", name: "Everything, Everywhere, All at Once" },
     ];
 
     /* Utility: Fisher–Yates shuffle */
